Renamed Kite to Kitematic.

--- a/meteor/client/views/dashboard/layouts/dashboard-layout.html
+++ b/meteor/client/views/dashboard/layouts/dashboard-layout.html
@@ -13,7 +13,7 @@
             {{#if $eq currentDashboardPage 'settings'}}
               <div class="mac-window-header"><a href="#"><i class="fa fa-gear"></i> Settings</a></div>
             {{else}}
-              <div class="mac-window-header"><a href="#">Kite</a></div>
+              <div class="mac-window-header"><a href="#">Kitematic</a></div>
             {{/if}}
           {{/if}}
         {{/if}}
