Renamed to Kitematic.

--- a/meteor/client/views/dashboard/settings/dashboard-settings.html
+++ b/meteor/client/views/dashboard/settings/dashboard-settings.html
@@ -3,9 +3,9 @@
     <div class="left-section">
       <h4>Boot2Docker VM</h4>
       {{#if $.Session.equals 'boot2dockerState' 'poweroff'}}
-        <p class="help-block error">Please start Boot2Docker for Kite to work properly!</p>
+        <p class="help-block error">Please start Boot2Docker for Kitematic to work properly!</p>
       {{else}}
-        <p class="help-block">All apps run in a Linux VM included with Kite. It needs to be turned to run apps.</p>
+        <p class="help-block">All apps run in a Linux VM included with Kitematic. It needs to be turned to run apps.</p>
       {{/if}}
     </div>
     <div class="right-section">
