--- a/meteor/client/views/dashboard/apps/dashboard-apps-settings.html
+++ b/meteor/client/views/dashboard/apps/dashboard-apps-settings.html
@@ -1,6 +1,30 @@
 <template name="dashboard_apps_settings">
   <div class="section">
     <div class="left-section">
+      <h4>App Details</h4>
+      <p class="help-block">This section lists more information about this app.</p>
+    </div>
+    <div class="right-section">
+      <div class="row">
+        <div class="col-xs-3">
+          <label>Host URL</label>
+        </div>
+        <div class="col-xs-8">
+          {{url}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-3">
+          <label>Status</label>
+        </div>
+        <div class="col-xs-8">
+          {{status}}
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section">
+    <div class="left-section">
       <h4>Config Variables</h4>
       <p class="help-block">You can update your app's environment variables here.</p>
     </div>
