--- a/meteor/client/views/dashboard/images/dashboard-images-settings.html
+++ b/meteor/client/views/dashboard/images/dashboard-images-settings.html
@@ -1,6 +1,60 @@
 <template name="dashboard_images_settings">
   <div class="section">
     <div class="left-section">
+      <h4>Image Details</h4>
+      <p class="help-block">This section lists more information about this image.</p>
+    </div>
+    <div class="right-section">
+      <div class="row">
+        <div class="col-xs-3">
+          <label>Name</label>
+        </div>
+        <div class="col-xs-8">
+          {{meta.name}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-3">
+          <label>Status</label>
+        </div>
+        <div class="col-xs-8">
+          {{status}}
+        </div>
+      </div>
+      {{#if meta.version}}
+        <div class="row">
+          <div class="col-xs-3">
+            <label>Version</label>
+          </div>
+          <div class="col-xs-8">
+            {{meta.version}}
+          </div>
+        </div>
+      {{/if}}
+      {{#if meta.author}}
+        <div class="row">
+          <div class="col-xs-3">
+            <label>Author</label>
+          </div>
+          <div class="col-xs-8">
+            {{meta.author}}
+          </div>
+        </div>
+      {{/if}}
+      {{#if meta.description}}
+        <div class="row">
+          <div class="col-xs-3">
+            <label>Description</label>
+          </div>
+          <div class="col-xs-8">
+            {{meta.description}}
+          </div>
+        </div>
+      {{/if}}
+    </div>
+  </div>
+  <div class="section">
+    <div class="left-section">
       <h4>Delete Image</h4>
       <p class="help-block">Delete this image permanently.</p>
     </div>
