Colored log display and linting.

--- a/meteor/client/views/dashboard/images/dashboard-images-logs.html
+++ b/meteor/client/views/dashboard/images/dashboard-images-logs.html
@@ -1,7 +1,7 @@
 <template name="dashboard_images_logs">
   <div class="logs">
     {{#each buildLogs}}
-      <h6>{{this}}</h6>
+      <h6>{{{this}}}</h6>
     {{/each}}
   </div>
 </template>
