--- a/meteor/client/main.less
+++ b/meteor/client/main.less
@@ -6,3 +6,5 @@
 @import "stylesheets/widgets.import.less";
 @import "stylesheets/mac.import.less";
 @import "stylesheets/dashboard.import.less";
+@import "stylesheets/setup.import.less";
+@import "stylesheets/spinner.import.less";
